--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </main>
     <footer>
       Coded by
-      <a href="#" target="_blank">Talent Maisvoreva</a>
-      <a href="#" target="_blank"> on Github</a> and
+      <a href="#" target="_blank">Talent Maisvoreva</a>and
+      <a href="#" target="_blank"> is open sourced on Github</a> and
       <a href="#" target="_blank"> hosted on Netlify</a>
     </footer>
   </body>
