--- a/index.html
+++ b/index.html
@@ -3,31 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <title>weatherapp</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter city..." required />
-        <input type="submit" value="search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Lisbon</h1>
-        <p>
-          Monday 13:45, scatterd clouds
-          <br />
-          Humidity:70%, Wind:4.5km/h
-        </p>
-      </div>
-      <div>⛅ 24°C</div>
-    </main>
-    <footer>
-      Coded by
-      <a href="#" target="_blank">Talent Maisvoreva</a>and
-      <a href="#" target="_blank"> is open sourced on Github</a> and
-      <a href="#" target="_blank"> hosted on Netlify</a>
-    </footer>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input
+            type="search"
+            placeholder="Enter city..."
+            required
+            class="search-input"
+          />
+          <input type="submit" value="search" class="search-form" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Lisbon</h1>
+          <p>
+            Monday 13:45, scatterd clouds
+            <br />
+            Humidity:70%, Wind:4.5km/h
+          </p>
+        </div>
+        <div>⛅ 24°C</div>
+      </main>
+      <footer>
+        Coded by
+        <a href="#" target="_blank">Talent Maisvoreva</a>and
+        <a href="#" target="_blank"> is open sourced on Github</a> and
+        <a href="#" target="_blank"> hosted on Netlify</a>
+      </footer>
+    </div>
   </body>
 </html>
