--- a/index.html
+++ b/index.html
@@ -26,18 +26,24 @@
         </form>
       </header>
       <main>
-        <div>
-          <h1>Lisbon</h1>
-          <p>
-            Monday 13:45, scatterd clouds
-            <br />
-            Humidity:70%, Wind:4.5km/h
-          </p>
+        <div class="app-data">
+          <div>
+            <h1 class="weather-city">Lisbon</h1>
+            <p class="app-details">
+              Monday 13:45, scatterd clouds
+              <br />
+              Humidity:<strong>87%</strong>, Wind:<strong>5km/h</strong>
+            </p>
+          </div>
+          <div class="weather-temperature-display">
+            <div class="app-icon">⛅</div>
+            <div class="app-temperature">24</div>
+            <div class="app-unit">°C</div>
+          </div>
         </div>
-        <div>⛅ 24°C</div>
       </main>
       <footer>
-        Coded by
+        This project was Coded by
         <a href="#" target="_blank">Talent Maisvoreva</a>and
         <a href="#" target="_blank"> is open sourced on Github</a> and
         <a href="#" target="_blank"> hosted on Netlify</a>
