--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
           <div>
             <h1 class="weather-city" id="weather-city">Lisbon</h1>
             <p class="app-details">
-              Monday 13:45, scatterd clouds
+              <span id="current-date"></span> </span
+              ><span id="description"></span>scatterd clouds
               <br />
-              Humidity:<strong>87%</strong>, Wind:<strong>5km/h</strong>
+              Humidity:<strong id="humidity"></strong>, Wind:<strong
+                id="wind-speed"
+              ></strong>
             </p>
           </div>
           <div class="weather-temperature-display">
@@ -49,7 +52,7 @@
         This project was Coded by
         <a href="#" target="_blank">Talent Maisvoreva</a>and
         <a href="#" target="_blank"> is open sourced on Github</a> and
-        <a href="#" target="_blank"> hosted on Netlify</a>
+        <a href="https://harmonious-brigadeiros-9cafef.netlify.app/" target="_blank"> hosted on Netlify</a>
       </footer>
     </div>
     <script src="src/index.js"></script>
