--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       </main>
       <footer>
         This project was Coded by
-        <a href="#" target="_blank">Talent Maisvoreva</a>and
-        <a href="#" target="_blank"> is open sourced on Github</a> and
+        <a href="https://github.com/Talentm36" target="_blank">Talent Maisvoreva</a>and
+        <a href="https://harmonious-brigadeiros-9cafef.netlify.app/" target="_blank"> is open sourced on Github</a> and
         <a href="https://harmonious-brigadeiros-9cafef.netlify.app/" target="_blank"> hosted on Netlify</a>
       </footer>
     </div>
